--- a/release-notes.html
+++ b/release-notes.html
@@ -5,12 +5,16 @@
 </head>
 <body>
 
-<li> <u>1.41m, 18 September 2008</u>
+<li> <u>1.41m, 19 September 2008</u>
 <li> <i>File&gt;Save</i> no longer displays a "Save As" dialog when
 resaving a TIFF stack.
 <ul> A more informative error message is displayed when
 attempting to process a virtual stack.
 <li> Added the eval("script", javascipt) macro function.
+<li> <i>Analyze&gt;Plot Profile</i> now uses the full file name, 
+minus the extenstion, in plot window titles.
+<li> Fixed a bug, introduced in v1.41l, that caused infinite numbers to
+be displayed as &#8734; instead of as "Infinity".
 </ul>
 
 </body>
