--- a/release-notes.html
+++ b/release-notes.html
@@ -5,9 +5,11 @@
 </head>
 <body>
 
-<li> <u>1.41n, 16 October 2008</u>
+<li> <u>1.41n, 17 October 2008</u>
+<ul>
 <li> Added the <i>Edit&gt;Options&gt;Compiler</i> command.
-<li> Added support for opening ARGB TIFFs (the alpha channel is ignored).
+<li> Added support for opening PackBits compressed TIFFs
+and ARGB TIFFs (alpha channel is ignored).
 <li> Added a "Scientific Notation" option to the <i>Analyze&gt;Set Options</i> dialog box.
 <li> Files  in the plugins folder with ".ijm" and ".js" extensions
 no longer require an "_" in the name to be installed in the Plugins menu.
