• 1.42a, 31 October 2008       □ Added the 4200x4200 "NileBend" image and the "Confocal Series"         4D stack to the File>Open Samples menu.       □ The Image>Color>Stack to RGB command is faster.       □ The IJ.openImage(path) method displays a file open dialog if         the 'path' argument is omitted or it is an empty string.       □ Fixed bugs that caused Image>Adjust>Color Balance to not work         correctly with composite color images.       □ Fixed a bug that caused the Adjust>Brightness/Contrast "Set"         option to not work as expected with composite color images.       □ Fixed a bug that caused the first slice and frame to always be         displayed after using Image>Hyperstack>Channels Tool to switch         a hyperstack to "Composite" mode.
Version 1.41, 24 October 2008 (download)



git-svn-id: http://code.imagej.net/svn/imagej/branches/ijx@490 be23795f-a60e-40d4-ba19-055798872e57

--- a/release-notes.html
+++ b/release-notes.html
@@ -12,8 +12,10 @@
 <li> Fixed a bug that caused the "Propagate to all n channels" option in the
 <li> Fixed bugs that caused <i>Image&gt;Adjust&gt;Color Balance</i> to not
 work correctly with composite color images.
-<i>Adjust&gt;Brightness/Contrast</i> and <i>Adjust&gt;Window/Levek</i> "Set"
-dialog to not work as expected with composite color images.
+<li> The IJ.openImage(path) method displays a file open dialog if the 'path' argument
+is omitted or it is an empty string.
+<li>Fixed bugs that caused the <i>Adjust&gt;Brightness/Contrast</i> and <i>Adjust&gt;Window/Level</i> "Set"
+option to not work as expected with composite color images.
 <li> Fixed a bug that caused the first slice and frame to always be displayed after
 using <i>Image&gt;Hyperstack&gt;Channels Tool</i> to switch a hyperstack
 to "Composite" mode.
