--- a/release-notes.html
+++ b/release-notes.html
@@ -5,15 +5,16 @@
 </head>
 <body>
 
-<li> <u>1.42c, 1 December 2008</u>
+<li> <u>1.42c, 2 December 2008</u>
 <ul>
 <li> Added a "Scaled Units" checkbox to the <i>Edit&gt;Selection&gt;Specify</i> dialog and
-a "Pixel Units" checkbox to the <i>Analyze&gt;Analyze Particles</i> dialog.
+ "Pixel Units" checkboxes to the <i>Analyze&gt;Analyze Particles</i> and <i>Edit&gt;Selection&gt;Enlarge</i>dialogs.
 These checkboxes are only displayed if the image is spatially calibrated.
 <li> The ROI Manager "Multi Measure" command adds the ROI name to the column headers if
 the name does not start with a digit or if its length is less than nine characters.
 <li> The length of the current straight line selection is now displayed in the <i>Analyze&gt;Set Scale</i> dialog
-with spacially calibrated images.
+with spatially calibrated images.
+<li> The getDirectory("image") macro function is more likely to work with an image loaded by an external plugin.
 <li> Worked around a bug on Mac OS X that required pressing the "Remove Scale" button in the <i>Analyze&gt;Set Scale</i> dialog box.
 </ul>
 
