--- a/release-notes.html
+++ b/release-notes.html
@@ -5,11 +5,13 @@
 </head>
 <body>
 
-<li> <u>1.42d, 4 December 2008</u>
+<li> <u>1.42d, 5 December 2008</u>
 <ul>
 <li> Added the <i>Macros&gt;Debug Mode</i> checkbox menu item to the macro editor.
 <li> The <i>Image&gt;Colors&gt;Channels Tool</i> is recorded.
 <li> Added the setMinAndMax(min,max,channels) macro function.
+<li> Fixed a bug, introduced in v1.42c, that caused the run("Set Scale...", options)
+macro function to fail.
 <li> Fixed a bug, introduced in v1.38, that caused the threshold to be reset 
 when clearing or filling a stack slice.
 </ul>
