--- a/release-notes.html
+++ b/release-notes.html
@@ -5,12 +5,16 @@
 </head>
 <body>
 
-<li> <u>1.42g, 12 January 2009</u>
+<li> <u>1.42h, 13 January 2009</u>
 <ul>
-<li> Fixed a bug, introduced in v1.42f, that caused commands in the
-<i>Plugins&gt;Macros</i> submenu to fail to work and caused extra commands
-to be added to the <i>Plugins&gt;Utilities</i> submenu.
+<li> The curve fitter (<i>Analyze&gt;Tools&gt;Curve Fitting</i>) works better when using the default settings
+(<a href="http://rsb.info.nih.gov/ij/macros/examples/RodbardSigmoidFit.txt">example</a>).
+<li> An updated Menus class, contributed by Johannes Schindelin, provides better Fiji compatibility and
+allows plugins to be installed in more menus.
+<li> Added the centerDialogMethod() to the GenericDialog class
+(<a href="http://rsb.info.nih.gov/ij/plugins/download/misc/Place_Dialog.java">example</a>).
 </ul>
 
+<a href="http://rsb.info.nih.gov/ij">Home</a>
 </body>
 </html>
