--- a/release-notes.html
+++ b/release-notes.html
@@ -5,23 +5,17 @@
 </head>
 <body>
 
-<li> <u>1.42j, 23 February 2009</u>
+<li> <u>1.42k, 24 February 2009</u>
 <ul>
-<li> <i>Analyze&gt;Analyze Particles</i> is faster because results are no longer continuosly displayed.
-<li> With 32-bit (float) images, <i>Process&gt;Math&gt;Divide</i> creates <i>Infinity</i>, <i>-Infinity</i> or <i>NaN</i> 
-pixels when the source pixels are positive, negative or zero.
-<li> Min and Max values in the Results window are infinite if the image contains <i>Infinity</i> or <i>-Infinity</i> values.
-<li> Added the Array.copy(), Array.getStatistics(), Array.sort() and Array.trim() macro functions.
-<li> The "Process Stack?" dialog is no longer displayed in macros that call run()
-without the optional options argument.
-<li> Values passed to the makeRectangle() and makeOval() macro functions are rounded.
-<li> The addResults() and updateResults() methods in the ResultsTable class
-allow values to be added to the "Results" window more quickly.
-<li> Fixed a bug, introduced in 1.42i, that caused the <i>Smooth</i>, <i>Sharpen</i> and <i>Find Edges</i>
-commands to invert16-bit stacks.
-<li> Fixed a bug that caused the Stack.setSlice() macro function to sometimes 
-not work correctly in batch mode macros.
- </ul>
+<li> JavaScript scripts can be passed a string argument from 
+ the command line (with the -macro option) and from the IJ.runMacroFile() method.
+<li> Added the Stack.setTUnit(string) and Stack.setZUnit(string) macro functions.
+<li> Julian Cooper fixed a bug in <i>Image&gt;Stacks&gt;Reslice</i> that somethimes caused the preview
+rectangle did not accurately show the extent when starting with a line selection.
+<li> Fixed a bug that caused run("Measure") to not work as expected when used in -batch command line macros.
+<li> Fixed a bug that sometimes caused the cursor X and Y coordinates to not be displayed
+in plot windows.
+</ul>
 
 <a href="http://rsb.info.nih.gov/ij">Home</a>
 </body>
