• 1.42k, 6 March 2009       □ Added the Image>Zoom>Set command, which is based on Albert         Cardona's ZoomExact plugin.       □ Process>Math> commands now support "Preview" and use parallel         threads when processing stacks.       □ Image>Type>RGB Color will convert the channels in a         multichannel composite color stack to an RGB stack if the         number of channels is the same as the number of images in the         stack and the display mode, set with the "Channels" tool, is         "Color" or "Grayscale".       □ Scripts can be passed a string argument when called from the         command line (using the -macro or -batch options) or using the         IJ.runMacroFile() method. Scripts can use the getArgument()         function to retrieve the argument.       □ Removed the "Input Slice Spacing" field from the Image>Stacks>         Reslice dialog box.       □ File>Import>URL opens JPEG, PNG and GIF images from URLs based         on either the extension or the content type.       □ Added the Plot.drawLine(x1,y1,x2,y2) macro function (example).       □ Added the Stack.setTUnit(string) and Stack.setZUnit(string)         macro functions.       □ Julian Cooper fixed a bug in Image>Stacks>Reslice that         somethimes caused the preview rectangle did not accurately show         the extent when starting with a line selection.       □ Berthold Daum fixed a bug that caused ImageJ to fail to open         48-bit TIFFs created by the RawTherapee program.       □ Fixed a bug that caused run("Measure") to not work as expected         when used in "-batch" command line macros.       □ Fixed a bug that sometimes caused the cursor X and Y         coordinates to not be displayed in plot windows.       □ Fixed a bug that caused scripts called from the command line         using the "-batch" option to fail to run.       □ Fixed a bug that caused IJ.getDirecory() calls to not be         recorded on Linux and Windows.       □ Fixed a bug that caused Image>Stacks>Resli

--- a/release-notes.html
+++ b/release-notes.html
@@ -5,12 +5,14 @@
 </head>
 <body>
 
-<li> <u>1.42k, 4 March 2009</u>
+<li> <u>1.42k, 6 March 2009</u>
 <ul>
 <li> Added the <i>Image&gt;Zoom&gt;Exact</i> command, 
 which is based on Albert Cardona's
 <a href="http://albert.rierol.net/software.html">ZoomExact</a>
 plugin.
+<li> <i>Process&gt;Math&gt;</i> commands now support "Preview" and use
+parallel threads when processing stacks.
 <li> <i>Image&gt;Type&gt;RGB Color</i> will convert the channels in a multichannel composite 
 color stack to an RGB stack if the number of channels is the same as the number of images in the
 stack and the display mode, set with the "Channels" tool, is "Color" or "Grayscale".
