• 1.42m, 22 April 2009       □ The Image>Stacks>Reslice command works with hyperstacks.       □ The up and down arrow keys now substitute for the "+" and "-"         shortcuts when zooming in and out. This only works if the shift         or control key is down when there is a selection.       □ When there is no selection, or the shift key is down, the arrow         keys can substitute for "<" and ">" when navigating stacks and         hyperstacks.       □ The More>>Multi Threshold command in the ROI Manager is much         faster.       □ When previewing point selections, Process>Binary>Find Maxima         does not label the points regardless of the "Label Shift-Click         Points" setting.       □ The Adjust>Threshold tool saves the LUT mode ("Red", "B&W" or         "Over/Under") in the preferences file.       □ Added the Stack.getStatistics(), is("changes"), getInfo         ("selection.name") and File.nameWithoutExtension macro         functions.       □ Added the ImageProcessor.setOverColor() and setUnderColor()         methods, which can be called from a macro to set the Over/Under         threshold colors (example).       □ Norbert Vischer fixed a bug that caused the macro debugger to         not work, and error message line numbers to be invalid, with         macros containing multiple line /*...*/ comments.       □ Michael Schmid fixed a bug in the public RankFilters.rank()         method that caused it to only process the red channel of RGB         images.       □ Sylvain Mainguy fixed a bug that caused the cursor to change to         a hand at the corners of the bounding box of composite         selections.       □ Fixed a bug that caused FL and FD DICOM VRs to not be correctly         decoded.       □ Fixed a bug in Image>Hyperstacks>Reduce Dimensionality that         caused it to not preserve image labels.       □ Fixed a bug that caused jar files containing class files with         "_" in the name in subfolders and no plugins.config file (e.g.,        

--- a/release-notes.html
+++ b/release-notes.html
@@ -17,7 +17,8 @@ substitute for "&lt;" and "&gt;" when navigating stacks and hyperstacks.
 does not label the points regardless of the "Label Shift-Click Points" setting.
 <li> The <i>Adjust&gt;&gt;Threshold</i> tool saves the LUT mode ("Red", "B&W" or "Over/Under")
 in the preferences file.
-<li> Added the Stack.getStatistics(), is("changes") and getInfo("selection.name") macro functions.
+<li> Added the Stack.getStatistics(), is("changes"), getInfo("selection.name") and
+File.nameWithoutExtension macro functions.
 <li> Added the ImageProcessor.setOverColor() and setUnderColor() methods that can
 be called from a macro to set the Over/Under threshold colors
 (<a href="http://rsb.info.nih.gov/ij/macros/examples/SetOverUnderThresholdColors.txt">example</a>).
