• 1.42o, 14 May 2009       □ Added the Image>Stacks>Orthogonal Views command, which is based         on Dimiter Prodanov's StackSlicer plugin and Albert Codona's         Updater class.       □ Thanks to Julian Cooper, a straight line selection can now be         rotated about its center by holding down the alt key.       □ File>Save As>AVI now works correctly with 5D hyperstacks (e.g.,         the Mitosis sample image).       □ Thanks to Michael Schmid, the EDM algorithm is more accurate,         there are options for 16-bit and float output, stacks are         processed using multiple threads, and Voronoi diagrams can be         generated.       □ Thanks to Michael Schmid, Process>Binary>Find Maxima works with         images>32768 pixels in width or height.       □ Gabriel Landini added the "Pad edges when eroding" option to         Process>Binary>Options.       □ With hyperstacks, Image>Stacks>Make Montage displays         instructions that explain how to create C, Z or T montages.       □ Added the Mitosis (26MB, 5D Stack) sample image, courtesy of         Eric Griffis and Nico Stuurman.       □ Fixed a bug that caused images with a width or height greater         than 65,535 to not be correctly saved in TIFF format.       □ Fixed a bug in the File.openAsRawString() macro function that         caused it to not correctly read bytes with values greater than         127.       □ Fixed a bug that caused an error message to be displayed when a         URL stack download was aborted by pressing 'esc'.       □ Fixed a bug that caused Process>Filters>Convolve to sometimes         record an extra "\".       □ Fixed a bug that caused TIFF and RAW virtual stacks greater         than 2GB to not open correctly.       □ Fixed a bug that could cause the measurent length of rapidly         drawn freehand line selections to be incorrect.       □ Fixed a bug that could cause the newImage() macro function to         display a bogus "out of memory" error.       □ Fixed a bug that ca

--- a/release-notes.html
+++ b/release-notes.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<li> <u>1.42o, 11 May 2009</u>
+<li> <u>1.42o, 14 May 2009</u>
 <ul>
 <li> Added  the <i>Image&gt;Stacks&gt;Orthogonal Views</i> command, which is based on
 Dimiter Prodanov's
@@ -26,6 +26,8 @@ multiple threads, and
  works with images>32768 pixels in width or height.
  <li> Gabriel Landini added the "Pad edges when eroding" option to
  <i>Process&gt;Binary&gt;Options</i>.
+ <li> With hyperstacks, <i>Image&gt;Stacks&gt;Make</i> displays instructions on that explain
+ how to create a C, Z or T montage. 
 <li> Added the <i>Mitosis (26MB, 5D Stack)</i> sample image, courtesy of
 Eric Griffis and Nico Stuurman.
 <li> Fixed a bug that caused images with a width or height greater than 65,535
