• 1.43b, 23 June 2009       □ Added the "Use Titles as Labels" checkbox to the Image>Stacks>         Images to Stack dialog box.       □ Kevin Moll contributed an enhanced and simplified         PluginClassLoader that extends URLClassLoader.       □ Fixed a bug, introduced in v1.43a, that caused Help>Update         ImageJ to fail if the path to ij.jar contained a space.       □ Fixed a bug that caused Image>Show Info to not display metadata         of stacks opened using File>Import>TIFF Virtual Stack.       □ Fixed a bug that sometimes caused the threshold limits to not         be passed to PlugInFilters using the CONVERT_TO_FLOAT flag.
git-svn-id: http://code.imagej.net/svn/imagej/branches/ijx@680 be23795f-a60e-40d4-ba19-055798872e57

--- a/release-notes.html
+++ b/release-notes.html
@@ -5,10 +5,14 @@
 </head>
 <body>
 
-<li> <u>1.43b, 22 June 2009</u>
+<li> <u>1.43b, 23 June 2009</u>
 <ul>
 <li> Kevin Moll contributed an enhanced and simplfied PluginClassLoader
 that extends URLClassLoader.
+<li> Added the "Use Titles as Labels" checkbox to the
+<i>Image&gt;Stacks&gt;Images to Stack</i> dialog box.
+<li> Fixed a bug, introduced in v1.43a, that caused
+<i>Help&gt;Update ImageJ</i> to fail if the path to ij.jar contained a space.
 <li> Fixed a bug that caused <i>Image&gt;Show Info</i> to not display metadata of stacks
 opened using <i>File&gt;Import&gt;TIFF Virtual Stack</i>.
 <li> Fixed a bug that sometimes caused the threshold limits to not be passed to PlugInFilters
