--- a/release-notes.html
+++ b/release-notes.html
@@ -5,18 +5,12 @@
 </head>
 <body>
 
-<li> <u>1.43b, 23 June 2009</u>
+<li> <u>1.43c, 24 June 2009</u>
 <ul>
-<li> Kevin Moll contributed an enhanced and simplfied PluginClassLoader
-that extends URLClassLoader.
-<li> Added the "Use Titles as Labels" checkbox to the
-<i>Image&gt;Stacks&gt;Images to Stack</i> dialog box.
-<li> Fixed a bug, introduced in v1.43a, that caused
-<i>Help&gt;Update ImageJ</i> to fail if the path to ij.jar contained a space.
+<li> Roi Manager "Show All" mode selections can again be moved by
+clicking on the selection's label and dragging.
 <li> Fixed a bug that caused <i>Image&gt;Show Info</i> to not display metadata of stacks
-opened using <i>File&gt;Import&gt;TIFF Virtual Stack</i>.
-<li> Fixed a bug that sometimes caused the threshold limits to not be passed to PlugInFilters
-using the CONVERT_TO_FLOAT flag.
+opened using <i>File&gt;Import&gt;Stack from List</i>.
 </ul>
 
 <a href="http://rsb.info.nih.gov/ij">Home</a>
