--- a/release-notes.html
+++ b/release-notes.html
@@ -5,13 +5,17 @@
 </head>
 <body>
 
-<li> <u>1.43e, 4 August 2009</u>
+<li> <u>1.43e, 6 August 2009</u>
 <ul>
 <li> Added a <i>Process&gt;Batch&gt;</i> submenu containing <i>Measure</i>,
 <i>Convert</i> and <i>Process</i> commands.
+<li> Thanks to Norbert Vischer, it is now easier to outline circular objects 
+using the elliptical selection tool with the shift key down.
 <li> Added an "Export" button to <i>Plugins&gt;Utilities&gt;Command Finder</i>.
 <li> Added the selectWindow("ImageJ") macro function.
 <li> Fixed a bug that caused image zooming to fail on secondary monitors.
+<li> Fixed a bug that cuased the particle analyzer to sometimes not work as expected
+when "Black Background" was enabled in the <i>Process&gt;Binary&gt;Options</i> dialog box.
 <li> Fixed a bug that caused the <i>Plugins&gt;Utilities&gt;Memory Monitor</i>
 tool to not work correctly when the line width was greater than one.
 </ul>
