--- a/release-notes.html
+++ b/release-notes.html
@@ -5,26 +5,10 @@
 </head>
 <body>
 
-<li> <u>1.43f, 24 August 2009</u>
+<li> <u>1.43g, 24 August 2009</u>
 <ul>
-<li> The <i>Image&gt;Scale</i> and <i>Image&gt;Adjust&gt;Size</i> commands
-can now scale stacks and hyperstacks in the Z dimension.
-<li> The <i>Image&gt;Color&gt;Merge Channels</i> command
-now works with hyperstacks.
-<li> Added the <i>File&gt;New&gt;Hyperstack</i> command, which 
-is an alias for <i>Image&gt;Hyperstacks&gt;New Hyperstack</i>.
-<li> <i>Analyze&gt;Tools&gt;Fractal Box Counter</i> writes results that
-can be read by macros.
-<li> Added the List.setCommands, setFont("user"), getInfo("font.name"),
-getValue("font.size") and getValue("font.height") macro functions.
-<li> Added the NonBlockingGenericDialog class (used by <i>Process&gt;Batch&gt;Process</i>),
-thanks to Johannes Schindelin.
-<li> Fixed a bug that sometimes caused the <i>Image&gt;Adjust&gt;Brightness/Contrast</i>
-"Apply" function to fail with RGB stacks.
-<li> Fixed a bug that sometimes caused <i>Image&gt;Color&gt;Split Channels</i>
-to display a "save changes?" dialog box.
-<li> Fixed a bug that caused <i>File&gt;Save As&gt;Image Sequence</i> to throw an
-exception if the window was closed before all the images in the stack were saved.
+<li> Added the ImageCanvas.createDisplayList() method
+(example).
 </ul>
 
 <a href="http://rsb.info.nih.gov/ij">Home</a>
