--- a/release-notes.html
+++ b/release-notes.html
@@ -5,26 +5,34 @@
 </head>
 <body>
 
-<li> <u>1.43f, 24 August 2009</u>
+<li> <u>1.43g, 18 September 2009</u>
 <ul>
-<li> The <i>Image&gt;Scale</i> and <i>Image&gt;Adjust&gt;Size</i> commands
-can now scale stacks and hyperstacks in the Z dimension.
-<li> The <i>Image&gt;Color&gt;Merge Channels</i> command
-now works with hyperstacks.
-<li> Added the <i>File&gt;New&gt;Hyperstack</i> command, which 
-is an alias for <i>Image&gt;Hyperstacks&gt;New Hyperstack</i>.
-<li> <i>Analyze&gt;Tools&gt;Fractal Box Counter</i> writes results that
-can be read by macros.
-<li> Added the List.setCommands, setFont("user"), getInfo("font.name"),
-getValue("font.size") and getValue("font.height") macro functions.
-<li> Added the NonBlockingGenericDialog class (used by <i>Process&gt;Batch&gt;Process</i>),
-thanks to Johannes Schindelin.
-<li> Fixed a bug that sometimes caused the <i>Image&gt;Adjust&gt;Brightness/Contrast</i>
-"Apply" function to fail with RGB stacks.
-<li> Fixed a bug that sometimes caused <i>Image&gt;Color&gt;Split Channels</i>
-to display a "save changes?" dialog box.
-<li> Fixed a bug that caused <i>File&gt;Save As&gt;Image Sequence</i> to throw an
-exception if the window was closed before all the images in the stack were saved.
+<li> Added the <i>Process&gt;Batch&gt;Virtual Stack</i> command.
+<li> Added the "Draw As Overlay" (display ROIs using a display list) and "Remove Overlay"
+commands to the ROI Manager.
+<li> Multi-point and text selectons are now properly
+displayed in the ROI Manager "Show All" mode.
+<li> Tiff stacks with a .tif extension open as virtual stacks when dragged 
+and dropped on the ">>" tool.
+<li> <i>Image&gt;Show Info</i>, and the getMetadata() macro function,
+retrieve the "DateTime" and "Software" TIFF tags.
+<li> <i>Plugins&gt;Compile and Run</i> defaults to the plugins
+directory instead of the ImageJ directory.
+<li> Added the ImageCanvas.setDisplayList(Roi,Color) method
+(<a href="http://rsb.info.nih.gov/ij/macros/js/TextOverlay.js">example</a>).
+<li> Added the IJ.handleException() and IJ.setExceptionHandler() methods.
+<li> Fixed a bug that could cause an exception when using the <i>Measure</i>
+command with segmented line selections wider than 1 pixel.
+<li> Fixed a bug that caused commands that opened a web page to fail on
+Mac OS X 10.6 when running the 32-bit version of Java 1.6.
+<li> Fixed a bug that caused "[aborted]" to be displayed in the Log
+window when a macro called using runMacro() was canceled.
+<li> Fixed a bug that could cause macro files containing 100 or more 
+functions to fail to install.
+<li> Fixed a bug in <i>Analyze&gt;Measure</i> that cause it to incorrectly
+calculate the area of line selections on spatially calibrated images and to
+incorrectly calculate the mean of straight line selections wider than 1 pixel
+on spatially calibrated images.
 </ul>
 
 <a href="http://rsb.info.nih.gov/ij">Home</a>
