--- a/release-notes.html
+++ b/release-notes.html
@@ -5,9 +5,24 @@
 </head>
 <body>
 
-<li> <u>1.43q, 12 February 2010</u>
+<li> <u>1.43r, 4 March 2010</u>
 <ul>
-<li> Fixed a bug, introduced in v1.43p, that caused Image5D to crash.
+<li> Added the <i>Edit&gt;Options&gt;DICOM</i> command.
+<li> Added "Headless" style to the arrow tool. 
+<li> Overlays are preserved when saving in JPEG format.
+<li> Restored the ROI Manager "FIll" and "Draw" commands.
+<li> Added the getInfo("overlay") macro function
+(<a href="http://rsbweb.nih.gov/ij/macros/examples/DisplayOverlayList.txt">example</a>).
+<li> Fixed regressions that caused 16-bit composite images to be converted to grayscale
+when saving in JPEG and PNG format.
+<li> Fixed a bug that caused the particle analyzer to open the Results
+window when the "ImageJ" window was not open.
+<li> Fixed a bug that caused the <i>File&gt;Open Next</i> command
+to not work correctly with composite images and hyperstacks.
+<li> Fixed a bug that caused stacks created by importing Analyze format images using
+<i>File&gt;Import&gt;Image Sequence</i> to contain duplicate images.
+<li> Fixed a bug that sometimes caused the wrong channel to be selected
+when clicking on the channel slider.
 </ul>
 
 <a href="http://rsb.info.nih.gov/ij">Home</a>
