--- a/applet.html
+++ b/applet.html
@@ -1,12 +1,15 @@
-<!-- Runs ImageJ as an Applet -->
+<!-- Runs ImageJA as an Applet -->
 
 <html>
 <head>
-<title>ImageJ Applet</title>
+<title>ImageJA Applet</title>
 </head>
-<body>
+<body bgcolor=gray>
 
-<applet codebase="." code="ij.ImageJApplet.class" archive="ij.jar" width=0 height=0>
+<applet codebase="." code="ij.ImageJApplet.class" archive="ij.jar"
+	width=750 height=550>
+<param name=url1 value=images/aboutja.jpg>
+<param name=url2 value=images/icon.gif>
 </applet>
 
 </body>
