Move all applet related stuff into a subdirectory
Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>


git-svn-id: http://code.imagej.net/svn/imagej/branches/ijx@944 be23795f-a60e-40d4-ba19-055798872e57

--- a/applet/debug.html
+++ b/applet/debug.html
@@ -2,15 +2,15 @@
 
 <html>
 <head>
-<title>ImageJA Applet</title>
+<title>ImageJA Applet - Debug</title>
 </head>
 <body bgcolor=gray>
 
 <applet codebase="." code="ij.ImageJApplet.class" archive="signed-ij.jar"
 	width=750 height=550>
-<param name=url1 value=../images/icon.png>
-<param name=url2 value=images/aboutja.jpg>
-<param name=url3 value=images/icon.gif>
+<param name=url1 value=../../images/icon.png>
+<param name=url2 value=../images/aboutja.jpg>
+<param name=url3 value=../images/icon.gif>
 </applet>
 
 </body>
