--- a/applet/inc-heap.html
+++ b/applet/inc-heap.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<title>ImageJA Applet</title>
+<title>ImageJA Applet - Increased Heap Demo</title>
 </head>
 <body bgcolor=gray>
 
@@ -10,8 +10,8 @@
 	width=750 height=550>
 <!-- works only with Java6 and later -->
 <param name="java_arguments" value="-Xmx128m">
-<param name=url1 value=aboutja.jpg>
-<param name=url2 value=icon.gif>
+<param name=url1 value=../images/aboutja.jpg>
+<param name=url2 value=../images/icon.gif>
 </applet>
 
 </body>
