--- a/applet/plugins.html
+++ b/applet/plugins.html
@@ -8,10 +8,10 @@
 
 <applet codebase="." code="ij.ImageJApplet.class" archive="signed-ij.jar"
 	width=750 height=550>
-<param name=url1 value=../images/icon.png>
-<param name=plugin1 value=../plugins/Siox_Segmentation.jar>
-<param name=plugin2 value=../plugins/Volume_Viewer.jar>
-<param name=plugin3 value=../plugins/Arrow_.jar>
+<param name=url1 value=../../images/icon.png>
+<param name=plugin1 value=../../plugins/Siox_Segmentation.jar>
+<param name=plugin2 value=../../plugins/Volume_Viewer.jar>
+<param name=plugin3 value=../../plugins/Arrow_.jar>
 </applet>
 
 </body>
