--- a/release-notes.html
+++ b/release-notes.html
@@ -5,37 +5,25 @@
 </head>
 <body>
 
-<li> <u>1.44a, 13 May 2010</u>
+<li> <u>1.44b, 1 June 2010</u>
 <ul> 
-<li> Overlays are preserved when printing and when saving in PNG format.
-<li> Thanks to Tiago Ferreira, <i>Image&gt;Stacks&gt;Tools&gt;Montage to Stack</i>
-now takes borders into acount.
-<li> Added "Rotate YZ" and "Flip XZ" options to
-<i>Edit&gt;Options&gt;DICOM</i>.
-<li> Thanks to Juan Grande, added "Save column headers" and "Save row numbers" 
-options to <i>Edit&gt;Options&gt;Input/Output</i>.
-<li>Constructing a HistogramWindow when using ImageJ as a library
-no long causes an image to be displayed.
-<li> Added a GenericDialog.addCheckboxGroup() method that sets
-column headings.
-<li> Fixed a bug that caused "Results" window summary data to not be saved.
-<li> Fixed a bug that caused Orthogonal Views crosshair lines to be saved as
-an overlay when saving in TIFF format.
-<li> Thanks to Barry DeZonia, fixed a bug that sometimes caused an  
-exception when drawing composite selection (ShapeRoi).
-<li> Fixed a bug that could cause the Threshold tool to not work correctly
-after using <i>File&gt;Revert</i> on a 16-bit DICOM image.
-<li> Fixed a bug that could cause the <i>Image&gt;Overlay&gt;Hide Overlay</i>
-and <i>Show Overlay</i> commands to not work as expected.
-<li> Thanks to Johannes Schindelin, fixed a bug in the PluginClassLoader that could
-cause an exception when running plugins using MIJ (Matlab to ImageJ interface).
-<li> Fixed a bug that caused DialogListeners to not be called with checkbox groups
-with fewer than five checkboxes.
-<li> Worked around a Linux bug that caused labels in GenericDialog checkbox groups to be
-centered rather than left justified.
-<li> Fixed bugs in <i>Image&gt;Stacks&gt;Othogonal Views</i> that caused it
-to not work correctly with zoomed images and with the 
-"+" (<i>Zoom In</i>) and "-" (<i>Zoom Out</i>) commands.
+<li> Added a "Unsigned 16-bit range" drop down menu to the "Set" dialog of the 
+<i>Image&gt;Adjust&gt;Contrast/Brightness</i> widget.
+<li> Added show="Overlay Outlines", show="Overlay Masks" and "In situ Show" options
+to the <i>Analyze&gt;Analyze Particles</i> dialog box.
+<li> Added a "Help" buttons to the <i>Process&gt;Binary&gt;Options</i>,
+<i>Analyze&gt;Analyze Particles</i>, <i>Analyze&gt;Set Measurements</i>,
+<i>Analyze&gt;Set Scale</i> and <i>Analyze&gt;Calibrate</i> dialog boxes.
+<li> Added a "Use overlay" option to <i>Image&gt;Stacks&gt;Label</i>.
+<li> <i>File&gt;Export&gt;AVI</i> and <i>File&gt;Export&gt;Image Sequence</i> 
+(when saving JPEG or PNG) now preserve overlays.
+<li> Added the Overlay.setStrokeColor() and Overlay.setfillColor() methods.
+<li> Fixed a bug that caused the getResult() macro function to return NaN
+with imported results containing column headers with leading or trailing spaces.
+<li> Fixed a bug that caused 8 and 16 bit grayscale stacks saved as JPEG-compressed 
+AVIs to not play correctly in the Windows 7 Media Player.
+<li> Fixed a bug that caused macros to become uninterruptible after doing a custom curve fit. 
+<li> Fixed a bug that caused redirected sampling of non-displayed images to fail.
 </ul> 
 
 <a href="http://rsb.info.nih.gov/ij">Home</a>
