--- a/release-notes.html
+++ b/release-notes.html
@@ -5,25 +5,36 @@
 </head>
 <body>
 
-<li> <u>1.44b, 1 June 2010</u>
+<li> <u>1.44c, 15 June 2010</u>
 <ul> 
-<li> Added a "Unsigned 16-bit range" drop down menu to the "Set" dialog of the 
-<i>Image&gt;Adjust&gt;Contrast/Brightness</i> widget.
-<li> Added show="Overlay Outlines", show="Overlay Masks" and "In situ Show" options
-to the <i>Analyze&gt;Analyze Particles</i> dialog box.
-<li> Added a "Help" buttons to the <i>Process&gt;Binary&gt;Options</i>,
-<i>Analyze&gt;Analyze Particles</i>, <i>Analyze&gt;Set Measurements</i>,
-<i>Analyze&gt;Set Scale</i> and <i>Analyze&gt;Calibrate</i> dialog boxes.
-<li> Added a "Use overlay" option to <i>Image&gt;Stacks&gt;Label</i>.
-<li> <i>File&gt;Export&gt;AVI</i> and <i>File&gt;Export&gt;Image Sequence</i> 
-(when saving JPEG or PNG) now preserve overlays.
-<li> Added the Overlay.setStrokeColor() and Overlay.setfillColor() methods.
-<li> Fixed a bug that caused the getResult() macro function to return NaN
-with imported results containing column headers with leading or trailing spaces.
-<li> Fixed a bug that caused 8 and 16 bit grayscale stacks saved as JPEG-compressed 
-AVIs to not play correctly in the Windows 7 Media Player.
-<li> Fixed a bug that caused macros to become uninterruptible after doing a custom curve fit. 
-<li> Fixed a bug that caused redirected sampling of non-displayed images to fail.
+<li> Raw integrated density (sum of pixel values) is displayed when "Integrated density"
+is enabled in <i>Analyze&gt;Set Measurements</i>.
+<li> Added a <i>File&gt;Rename</i> command and <i>Results</i> menu to Results windows.
+<li> Added "Help" buttons to the <i>Process&gt;Find Maxima</i>,
+<i>Process&gt;Image Caclulator</i> and <i>Process&gt;Subtract Background</i>
+ dialog boxes.
+<li> Pressing the esc aborts macros displaying a "WaitForUser" dialog.
+<li> Changed the name of the <i>File&gt;Save As&gt;Measurements</i> command to
+<i>File&gt;Save As&gt;Results</i> and changed <i>Help&gt;Update Menus</i> to
+<i>Help&gt;Refresh Menus</i>.
+<li> The Bio-Formats plugin (loci_tools.jar) is added to the
+compiler's classpath by <i>Plugins&gt;Compile and Run</i>.
+<li> The TiffDecoder displays information needed to import the file
+(number of images, offset to first images, gap between images) when ImageJ is in debug mode.
+<li> The MacClipboard plugin, which opens PICT images from the clipboard 
+using QuickTime for Java, is now included in ij.jar.
+<li> Added the IJ.renameResults() macro function.
+<li> Worked around a bug that caused the <i>Image&gt;Stacks&gt;Reslice</i>
+command to be very slow on some 64-bit versions of Java.
+<li> Fixed a bug that sometimes caused a "negative seek offset"
+error when opening TIFF files larger than 2GB.
+<li> Fixed a bug that caused <i>File&gt;Import&gt;TIFF Virtual Stack</i>
+to not display the TIFF tags when ImageJ was in the debug mode;
+<li> Fixed a bug that caused "/" to be added to the FileInfo directories when opening
+a folder of images using drag and drop on Windows.
+<li> Fixed a bug in the setAutoThreshold() macro function and ImageProcessor.setAutoThreshold()
+method that caused the threshold level to be one less than the level set by the "Threshold" widget
+when "Dark background' was enabled.
 </ul> 
 
 <a href="http://rsb.info.nih.gov/ij">Home</a>
